Library Management System

--- a/LibraryManagementSystem/nbproject/project.properties
+++ b/LibraryManagementSystem/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=LibraryManagementSystem
+application.vendor=adittachakraborty
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,9 +27,11 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/LibraryManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=/Users/adittachakraborty/Desktop/Driver/jcalendar-1.4.jar
 file.reference.JTattoo-1.6.11.jar=/Users/adittachakraborty/Desktop/Driver/JTattoo-1.6.11.jar
+file.reference.mail.jar=/Users/adittachakraborty/Desktop/Driver/mail.jar
 file.reference.mysql-connector-java-8.0.15.jar=/Users/adittachakraborty/Desktop/Driver/mysql-connector-java-8.0.15.jar
 file.reference.rs2xml.jar=/Users/adittachakraborty/Desktop/Driver/rs2xml.jar
 includes=**
@@ -37,7 +40,8 @@ javac.classpath=\
     ${file.reference.JTattoo-1.6.11.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.rs2xml.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=librarymanagementsystem.Dashboard
+main.class=librarymanagementsystem.SignInSignOut
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
