--- a/LibraryManagementSystem/nbproject/project.properties
+++ b/LibraryManagementSystem/nbproject/project.properties
@@ -29,9 +29,10 @@ dist.jar=${dist.dir}/LibraryManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.jar=/Users/adittachakraborty/Desktop/Driver/mail 2/activation-1.1.jar
+file.reference.javax.mail-1.6.2.jar=/Users/adittachakraborty/Desktop/Driver/mail 2/javax.mail-1.6.2.jar
 file.reference.jcalendar-1.4.jar=/Users/adittachakraborty/Desktop/Driver/jcalendar-1.4.jar
 file.reference.JTattoo-1.6.11.jar=/Users/adittachakraborty/Desktop/Driver/JTattoo-1.6.11.jar
-file.reference.mail.jar=/Users/adittachakraborty/Desktop/Driver/mail.jar
 file.reference.mysql-connector-java-8.0.15.jar=/Users/adittachakraborty/Desktop/Driver/mysql-connector-java-8.0.15.jar
 file.reference.rs2xml.jar=/Users/adittachakraborty/Desktop/Driver/rs2xml.jar
 includes=**
@@ -41,7 +42,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.activation-1.1.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
